# MoleculeGNN

./: .gitignore  README.md  app.py  main.py  pyproject.toml
config/: __init__.py  config.py
core/: __init__.py  dataset.py  evaluator.py  predictor.py  trainer.py  utils.py
models/: __init__.py  gcn.py  gin.py
notebooks/: data_exploration.ipynb  data_extract.ipynb  model_training.ipynb
utils/: __init__.py  dataset.py  trainer.py
