[project]
name = "molecular"
version = "0.1.0"
description = "Predicting molecular properties using Graph Neural Networks."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "plotly>=5.18.0",
    "rdkit>=2025.3.6",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
]
